--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 <head>
 <meta charset="utf-8">
 <title>Agathe Cocco - Junior Fornt End Developer</title>
@@ -18,29 +18,28 @@
     <div class="container has-text-centered intro-text">
       <h1>Hello! I'm Agathe.</h1>
       <p>I am an aspiring front-end developer based in London, UK.</p>
-      <img src="img/icon-5.png" width="100" alt="" />
-    </div>
+      <img src="img/icon-5.png" width="100" alt="" /> </div>
   </div>
 </section>
 <section id="about" class="hero is-fullheight">
   <div class="hero-body">
-    <div data-bottom-top="transform: translateZ(0) translateY(30%);" data-top-bottom="transform: translateZ(0) translateY(-30%);" class="section-title">
+    <div data-stellar-ratio="0.9" class="section-title">
       <h1 class="huge-font">About</h1>
     </div>
     <div class="container">
       <div class="columns">
         <div class="column is-half relative">
           <div class="img-wrap">
-            <div data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="img-bg"></div>
-            <div class="img-top" data-bottom-top="transform: translateZ(0) translateY(50%);" data-top-bottom="transform: translateZ(0) translateY(-40%);"><img src="img/profile.jpg" width="400" height="400" alt=""/></div>
+            <div class="img-top" data-stellar-ratio="1.1"><img src="img/profile.jpg" alt=""/></div>
+            <div data-stellar-ratio="1.3" class="img-bg"></div>
           </div>
         </div>
         <div class="column is-half">
           <h2>About me</h2>
           <p>Purr for no reason cough furball for paw at beetle and eat it before it gets away pee in human's bed until he cleans the litter box for sweet beast, yet spit up on light gray carpet instead of adjacent linoleum. Intently stare at the same spot stick butt in face, but swat at dog, but chase ball of string for attack dog.Purr for no reason cough furball for paw at beetle and eat it before it gets away pee in human's bed until he cleans the litter box for sweet beast, yet spit up on light gray carpet instead of adjacent linoleum. Intently stare at the same spot stick butt in face, but swat at dog, but chase ball of string for attack dog</p>
-          <a class="btn" href="mailto:agathecocco@gmail.com"><div class="btn-background"><span>
-          Contact me</span></div></a>
-          
+          <div class="btn-container"> <a class="btn" href="mailto:agathecocco@gmail.com">
+            <div class="btn-background"><span> Contact me</span></div>
+            </a></div>
         </div>
       </div>
     </div>
@@ -48,53 +47,50 @@
 </section>
 <section id="skills" class="hero">
   <div class="hero-body">
-    <div data-bottom-top="transform: translateZ(0) translateY(30%);" data-top-bottom="transform: translateZ(0) translateY(-30%);" class="section-title">
+    <div data-stellar-ratio="0.9" class="section-title">
       <h1 class="huge-font">Skills</h1>
     </div>
     <div class="container has-text-centered">
       <h2>What I can do</h2>
-<div class="columns">
-<div class="column is-one-third">
-<h3>Web and UX Design</h3>
-<p>Intently stare at the same spot stick butt in face, but swat at dog, but chase ball of string for attack dog</p>
-</div>
-<div class="column is-one-third">
-<h3>Web development</h3>
-<p>Purr for no reason cough furball for paw at beetle and eat it before it gets away pee in human's bed until he cleans the litter box for sweet beast, yet spit up on light gray carpet.</p>
-</div>
-<div class="column is-one-third">
-<h3>Email development</h3>
-<p> Intently stare at the same spot stick butt in face, but swat at dog, but chase ball of string for attack dog.Purr for no reason cough furball.</p>
-</div>
-</div>
-  </div>
+      <div class="columns">
+        <div class="column is-one-third">
+          <h3>Web and UX Design</h3>
+          <p>Intently stare at the same spot stick butt in face, but swat at dog, but chase ball of string for attack dog</p>
+        </div>
+        <div class="column is-one-third">
+          <h3>Web development</h3>
+          <p>Purr for no reason cough furball for paw at beetle and eat it before it gets away pee in human's bed until he cleans the litter box for sweet beast, yet spit up on light gray carpet.</p>
+        </div>
+        <div class="column is-one-third">
+          <h3>Email development</h3>
+          <p> Intently stare at the same spot stick butt in face, but swat at dog, but chase ball of string for attack dog.Purr for no reason cough furball.</p>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 <section id="work" class="hero is-fullheight">
- <figure data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="main-particle p-1 particle-1"></figure>
-  <figure data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="main-particle p-2 particle-2"></figure>
-  <figure data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="main-particle p-3 particle-3"></figure>
-  <figure data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="main-particle p-4 particle-4"></figure>
-  <figure data-bottom-top="transform: translateZ(0) translateY(-20%);" data-top-bottom="transform: translateZ(0) translateY(350%);" class="main-particle p-5 particle-5"></figure>
-    <figure data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="main-particle p-6 particle-6"></figure>
-  <figure data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="main-particle p-7 particle-7"></figure>
-  <figure data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="main-particle p-8 particle-8"></figure>
-  <figure data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="main-particle p-9 particle-9"></figure>
-  <figure data-bottom-top="transform: translateZ(0) translateY(-20%);" data-top-bottom="transform: translateZ(0) translateY(350%);" class="main-particle p-10 particle-10"></figure>
-    <figure data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="main-particle p-11 particle-11"></figure>
-  <figure data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="main-particle p-12 particle-12"></figure>
-  <figure data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="main-particle p-13 particle-13"></figure>
-  <figure data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="main-particle p-14 particle-14"></figure>
-  <figure data-bottom-top="transform: translateZ(0) translateY(-20%);" data-top-bottom="transform: translateZ(0) translateY(350%);" class="main-particle p-15 particle-15"></figure>
-    <figure data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="main-particle p-16 particle-16"></figure>
-  <figure data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="main-particle p-17 particle-17"></figure>
-  <figure data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="main-particle p-18 particle-18"></figure>
-  <figure data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="main-particle p-19 particle-19"></figure>
-  <figure data-bottom-top="transform: translateZ(0) translateY(-20%);" data-top-bottom="transform: translateZ(0) translateY(350%);" class="main-particle p-20 particle-20"></figure>
-    <figure data-bottom-top="transform: translateZ(0) translateY(-20%);" data-top-bottom="transform: translateZ(0) translateY(350%);" class="main-particle p-21 particle-21"></figure>
-      <figure data-bottom-top="transform: translateZ(0) translateY(-20%);" data-top-bottom="transform: translateZ(0) translateY(350%);" class="main-particle p-21 particle-21"></figure>
+  <figure data-stellar-ratio="1.2" class="main-particle p-1 particle-1"></figure>
+  <figure data-stellar-ratio="1.5" class="main-particle p-2 particle-2"></figure>
+  <figure data-stellar-ratio="1.4" class="main-particle p-3 particle-3"></figure>
+  <figure data-stellar-ratio="1.1" class="main-particle p-4 particle-4"></figure>
+  <figure data-stellar-ratio="1" class="main-particle p-5 particle-5"></figure>
+  <figure data-stellar-ratio="0.4" class="main-particle p-6 particle-6"></figure>
+  <figure data-stellar-ratio="1.9" class="main-particle p-7 particle-7"></figure>
+  <figure data-stellar-ratio="0.9" class="main-particle p-8 particle-8"></figure>
+  <figure data-stellar-ratio="1.7" class="main-particle p-9 particle-9"></figure>
+  <figure data-stellar-ratio="1.1" class="main-particle p-10 particle-10"></figure>
+  <figure data-stellar-ratio="1.2" class="main-particle p-13 particle-13"></figure>
+  <figure data-stellar-ratio="1.4" class="main-particle p-14 particle-14"></figure>
+  <figure data-stellar-ratio="0.7" class="main-particle p-15 particle-15"></figure>
+  <figure data-stellar-ratio="1.3" class="main-particle p-16 particle-16"></figure>
+  <figure data-stellar-ratio="1.8" class="main-particle p-17 particle-17"></figure>
+  <figure data-stellar-ratio="0.5" class="main-particle p-18 particle-18"></figure>
+  <figure data-stellar-ratio="1.1" class="main-particle p-19 particle-19"></figure>
+  <figure data-stellar-ratio="1" class="main-particle p-20 particle-20"></figure>
+  <figure data-stellar-ratio="0.9" class="main-particle p-22 particle-22"></figure>
   <div class="hero-body">
-    <div data-bottom-top="transform: translateZ(0) translateY(30%);" data-top-bottom="transform: translateZ(0) translateY(-30%);" class="section-title">
+    <div data-stellar-ratio="0.9" class="section-title">
       <h1 class="huge-font">Work</h1>
     </div>
     <div class="container has-text-centered">
@@ -102,54 +98,64 @@
       <div class="columns project1">
         <div class="column is-half">
           <div class="img-wrap">
-            <div data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="img-bg"></div>
-            <div class="img-top" data-bottom-top="transform: translateZ(0) translateY(50%);" data-top-bottom="transform: translateZ(0) translateY(-40%);"><img src="img/project-1.jpg" width="400" height="400" alt=""/>
+            <div data-stellar-ratio="1.3" class="img-bg"></div>
+            <div class="img-top" data-stellar-ratio="1.1"><img src="img/project-1.jpg" class="image" alt=""/>
               <div class="caption">
                 <div class="blur"></div>
                 <div class="caption-text">
                   <h1><a href="#">View project</a></h1>
-                  <img src="img/icon-5.png" width="70" alt=""/>
-                </div>
+                  <img src="img/icon-5.png" width="70" alt=""/> </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="column is-half">
+        <div class="column is-half text">
+        <div>
+          <h3>Project #1</h3>
           <p>Purr for no reason cough furball for paw at beetle and eat it before it gets away pee in human's bed until he cleans the litter box for sweet beast, yet spit up on light gray carpet instead of adjacent linoleum. </p>
+          </div>
         </div>
       </div>
       <div class="columns project2">
-        <div class="column is-half">
-          <p>Purr for no reason cough furball for paw at beetle and eat it before it gets away pee in human's bed until he cleans the litter box for sweet beast, yet spit up on light gray carpet instead of adjacent linoleum.</p>
-        </div>
-        <div class="column is-half">
+        <div class="column is-half is-right">
           <div class="img-wrap">
-            <div data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="img-bg"></div>
-            <div class="img-top" data-bottom-top="transform: translateZ(0) translateY(50%);" data-top-bottom="transform: translateZ(0) translateY(-40%);"><img src="img/project-2.jpg" width="400" height="400" alt=""/>    <div class="caption">
+            <div data-stellar-ratio="1.3" class="img-bg"></div>
+            <div class="img-top" data-stellar-ratio="1.1"><img src="img/project-2.jpg" alt=""/>
+              <div class="caption">
                 <div class="blur"></div>
                 <div class="caption-text">
                   <h1><a href="#">View project</a></h1>
-                  <img src="img/icon-5.png" width="70" alt=""/>
-                </div>
-              </div></div>
+                  <img src="img/icon-5.png" width="70" alt=""/> </div>
+              </div>
+            </div>
           </div>
+        </div>
+        <div class="column is-half is-left text">
+        <div>
+          <h3>Project #2</h3>
+          <p>Purr for no reason cough furball for paw at beetle and eat it before it gets away pee in human's bed until he cleans the litter box for sweet beast, yet spit up on light gray carpet instead of adjacent linoleum.</p>
+        </div>
         </div>
       </div>
       <div class="columns project3">
         <div class="column is-half">
           <div class="img-wrap">
-            <div data-bottom-top="transform: translateZ(0) translateY(10%);" data-top-bottom="transform: translateZ(0) translateY(2%);" class="img-bg"></div>
-            <div class="img-top" data-bottom-top="transform: translateZ(0) translateY(50%);" data-top-bottom="transform: translateZ(0) translateY(-40%);"><img src="img/project-3.jpg" width="400" height="400" alt=""/>    <div class="caption">
+            <div data-stellar-ratio="1.3" class="img-bg"></div>
+            <div class="img-top" data-stellar-ratio="1.1"><img src="img/project-3.jpg" alt=""/>
+              <div class="caption">
                 <div class="blur"></div>
                 <div class="caption-text">
                   <h1><a href="#">View project</a></h1>
-                  <img src="img/icon-5.png" width="70" alt=""/>
-                </div>
-              </div></div>
+                  <img src="img/icon-5.png" width="70" alt=""/> </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="column is-half">
+        <div class="column is-half text">
+        <div>
+          <h3>Project #3</h3>
           <p>Purr for no reason cough furball for paw at beetle and eat it before it gets away pee in human's bed until he cleans the litter box for sweet beast, yet spit up on light gray carpet instead of adjacent linoleum.</p>
+          </div>
         </div>
       </div>
     </div>
@@ -158,37 +164,30 @@
 <section id="contact"  class="hero">
   <div class="hero-body">
     <div class="container has-text-centered">
-    <a class="btn" href="mailto:agathecocco@gmail.com">
-    <div class="btn-background"><span>
-          Contact me</span></div></a></div>
+      <h2>Get in touch</h2>
+      <p>Wanna talk? Great! You can send me an email to:</p>
+      <a class="btn" href="mailto:agathecocco@gmail.com">
+      <div class="btn-background"><span> Contact me</span></div>
+      </a></div>
   </div>
 </section>
+ 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
 <script type="text/javascript" src="js/skrollr.min.js"></script> 
 <!--[if lt IE 9]>
   <script type="text/javascript" src="dist/skrollr.ie.min.js"></script>
   <![endif]--> 
+<script type="text/javascript" src="js/jquery.stellar.js"></script> 
 <script type="text/javascript" src="js/jquery.firefly.js"></script> 
 <script type="text/javascript" src="js/smooth-scrolling.js"></script> 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
-<script src="js/jquery-parallax.js"></script>
-<script type="text/javascript">
-	var s = skrollr.init({
-		forceHeight: false,
-		edgeStrategy: 'set',
-		easing: {
-			WTF: Math.random,
-			inverted: function(p) {
-				return 1-p;
-			}
-		}
-	});
-	</script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script> 
+<script src="js/jquery-parallax.js"></script> 
+<script src="js/main.js"></script> 
 <script>
             $(function(){
                $.firefly();
             });
-</script>
+</script> 
 <script>
 		$( '.btn-background' ).on("mousemove", function( e ) {
 			$( 'a.btn span' ).parallax( 90, e );
@@ -199,6 +198,5 @@
     });
 
 	</script>
-
 </body>
 </html>
