--- a/index.html
+++ b/index.html
@@ -5,183 +5,221 @@
 <title>Agathe Cocco - Junior Fornt End Developer</title>
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="shortcut icon" href="img/favicon-3.ico" type="image/x-icon">
-<link rel="icon" href="img/favicon-3.ico" type="image/x-icon">
+<link rel="shortcut icon" href="img/favicon2.ico" type="image/x-icon">
+<link rel="icon" href="img/favicon2.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/bulma.css">
 <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<section id="intro" class="hero is-fullheight">
-  <div class="hero-body">
-    <div class="container has-text-centered intro-text">
-      <h1>Hello! I'm Agathe.</h1>
-      <p>I am an aspiring front-end developer based in London, UK.</p>
-      <img src="img/icon-5.png" width="100" alt="" /> </div>
+<main>
+  <div class="hero-parent">
+    <section id="intro" class="hero is-fullheight">
+      <div class="hero-body">
+        <div class="container has-text-centered intro-text">
+          <h1>Hello! I'm Agathe.</h1>
+          <p>I am an self-taught front-end developer based in London, UK.</p>
+        </div>
+      </div>
+    </section>
   </div>
-</section>
-<section id="about" class="hero is-fullheight">
-  <div class="hero-body">
-    <div data-stellar-ratio="0.9" class="section-title">
-      <h1 class="huge-font">About</h1>
-    </div>
-    <div class="container">
-      <div class="columns">
-        <div class="column is-half relative">
-          <div class="img-wrap">
-            <div class="img-top" data-stellar-ratio="1.1"><img src="img/profile.jpg" alt=""/></div>
-            <div data-stellar-ratio="1.3" class="img-bg"></div>
+  <section id="about" class="hero is-fullheight">
+    <div class="hero-body">
+      <div class="container">
+        <div class="columns">
+          <div class="column is-half relative">
+            <div class="img-wrap">
+              <div class="img-top" data-stellar-ratio="1.1"><img src="img/profile.jpg" alt=""/></div>
+              <div data-stellar-ratio="1.3" class="img-bg"></div>
+            </div>
           </div>
-        </div>
-        <div class="column is-half">
-          <h2>About me</h2>
-          <p>Purr for no reason cough furball for paw at beetle and eat it before it gets away pee in human's bed until he cleans the litter box for sweet beast, yet spit up on light gray carpet instead of adjacent linoleum. Intently stare at the same spot stick butt in face, but swat at dog, but chase ball of string for attack dog.Purr for no reason cough furball for paw at beetle and eat it before it gets away pee in human's bed until he cleans the litter box for sweet beast, yet spit up on light gray carpet instead of adjacent linoleum. Intently stare at the same spot stick butt in face, but swat at dog, but chase ball of string for attack dog</p>
-          <div class="btn-container"> <a class="btn" href="mailto:agathecocco@gmail.com">
-            <div class="btn-background"><span> Contact me</span></div>
-            </a></div>
+          <div class="column is-half">
+            <h2>About me</h2>
+            <p>Hello, my name is Agathe Cocco. I'm a web enthusiast with a keen interest in UI/UX and web design born and raised in Reims, France. By day I'm working as an email designer and developer, ocasionally building a landing page or a microsite. By night I like to mess around with HTML, CSS and Javascript and develop my coding skills. I enjoy challenging projects that require me to push my skills to a new level. I'm currently learning Angular.js. When I’m not learning to code or messing around on some new project, I enjoy spending time with my family, reading, listening to music, taking photos, and eating icecream.</p>
+            <a class="btn" href="mailto:agathecocco@gmail.com">Say hello</a></div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-<section id="skills" class="hero">
-  <div class="hero-body">
-    <div data-stellar-ratio="0.9" class="section-title">
-      <h1 class="huge-font">Skills</h1>
-    </div>
-    <div class="container has-text-centered">
-      <h2>What I can do</h2>
-      <div class="columns">
-        <div class="column is-one-third">
-          <h3>Web and UX Design</h3>
-          <p>Intently stare at the same spot stick butt in face, but swat at dog, but chase ball of string for attack dog</p>
-        </div>
-        <div class="column is-one-third">
-          <h3>Web development</h3>
-          <p>Purr for no reason cough furball for paw at beetle and eat it before it gets away pee in human's bed until he cleans the litter box for sweet beast, yet spit up on light gray carpet.</p>
-        </div>
-        <div class="column is-one-third">
-          <h3>Email development</h3>
-          <p> Intently stare at the same spot stick butt in face, but swat at dog, but chase ball of string for attack dog.Purr for no reason cough furball.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<section id="work" class="hero is-fullheight">
-  <figure data-stellar-ratio="1.2" class="main-particle p-1 particle-1"></figure>
-  <figure data-stellar-ratio="1.5" class="main-particle p-2 particle-2"></figure>
-  <figure data-stellar-ratio="1.4" class="main-particle p-3 particle-3"></figure>
-  <figure data-stellar-ratio="1.1" class="main-particle p-4 particle-4"></figure>
-  <figure data-stellar-ratio="1" class="main-particle p-5 particle-5"></figure>
-  <figure data-stellar-ratio="0.4" class="main-particle p-6 particle-6"></figure>
-  <figure data-stellar-ratio="1.9" class="main-particle p-7 particle-7"></figure>
-  <figure data-stellar-ratio="0.9" class="main-particle p-8 particle-8"></figure>
-  <figure data-stellar-ratio="1.7" class="main-particle p-9 particle-9"></figure>
-  <figure data-stellar-ratio="1.1" class="main-particle p-10 particle-10"></figure>
-  <figure data-stellar-ratio="1.2" class="main-particle p-13 particle-13"></figure>
-  <figure data-stellar-ratio="1.4" class="main-particle p-14 particle-14"></figure>
-  <figure data-stellar-ratio="0.7" class="main-particle p-15 particle-15"></figure>
-  <figure data-stellar-ratio="1.3" class="main-particle p-16 particle-16"></figure>
-  <figure data-stellar-ratio="1.8" class="main-particle p-17 particle-17"></figure>
-  <figure data-stellar-ratio="0.5" class="main-particle p-18 particle-18"></figure>
-  <figure data-stellar-ratio="1.1" class="main-particle p-19 particle-19"></figure>
-  <figure data-stellar-ratio="1" class="main-particle p-20 particle-20"></figure>
-  <figure data-stellar-ratio="0.9" class="main-particle p-22 particle-22"></figure>
-  <div class="hero-body">
-    <div data-stellar-ratio="0.9" class="section-title">
-      <h1 class="huge-font">Work</h1>
-    </div>
-    <div class="container has-text-centered">
-      <h2>Work</h2>
-      <div class="columns project1">
-        <div class="column is-half">
-          <div class="img-wrap">
-            <div data-stellar-ratio="1.3" class="img-bg"></div>
-            <div class="img-top" data-stellar-ratio="1.1"><img src="img/project-1.jpg" class="image" alt=""/>
-              <div class="caption">
-                <div class="blur"></div>
-                <div class="caption-text">
-                  <h1><a href="#">View project</a></h1>
-                  <img src="img/icon-5.png" width="70" alt=""/> </div>
+  </section>
+  <div class="hero-parent">
+    <section id="skills" class="hero is-fullheight">
+      <div class="hero-body">
+        <div class="container has-text-centered">
+          <h2>What I do</h2>
+          <div class="columns">
+            <div class="column is-one-third">
+              <div data-stellar-ratio="1.03" class="circle"></div>
+              <div data-stellar-ratio="0.97" class="skills-details">
+                <h3>Web and UX Design</h3>
+                <p>Intently stare at the same spot stick butt in face, but swat at dog, but chase ball of string for attack dog</p>
+              </div>
+            </div>
+            <div class="column is-one-third middle">
+              <div data-stellar-ratio="1.03" class="circle"></div>
+              <div data-stellar-ratio="0.97" class="skills-details">
+                <h3>Web development</h3>
+                <p>I design in the browser with HTML5, CSS3 and a touch of JavaScript. I can code things from scratch or work with front-end frameworks.</p>
+              </div>
+            </div>
+            <div class="column is-one-third last">
+              <div data-stellar-ratio="1.03" class="circle"></div>
+              <div data-stellar-ratio="0.97" class="skills-details">
+                <h3>Tools and technologies</h3>
+                <p>HTML CSS SASS Bourbon</p>
+                <p>Javascript jQuery</p>
+                <p>Git npm</p>
+                <p>Photoshop Illustrator</p>
+                <p>DreamWeaver SublimeText</p>
               </div>
             </div>
           </div>
         </div>
-        <div class="column is-half text">
-        <div>
-          <h3>Project #1</h3>
-          <p>Purr for no reason cough furball for paw at beetle and eat it before it gets away pee in human's bed until he cleans the litter box for sweet beast, yet spit up on light gray carpet instead of adjacent linoleum. </p>
-          </div>
-        </div>
       </div>
-      <div class="columns project2">
-        <div class="column is-half is-right">
-          <div class="img-wrap">
-            <div data-stellar-ratio="1.3" class="img-bg"></div>
-            <div class="img-top" data-stellar-ratio="1.1"><img src="img/project-2.jpg" alt=""/>
-              <div class="caption">
-                <div class="blur"></div>
-                <div class="caption-text">
-                  <h1><a href="#">View project</a></h1>
-                  <img src="img/icon-5.png" width="70" alt=""/> </div>
+    </section>
+  </div>
+  <section id="work" class="hero is-fullheight">
+    <figure data-stellar-ratio="1.2" class="main-particle p-1 particle-1"></figure>
+    <figure data-stellar-ratio="1.5" class="main-particle p-2 particle-2"></figure>
+    <figure data-stellar-ratio="1.55" class="main-particle p-3 particle-3"></figure>
+    <figure data-stellar-ratio="1.1" class="main-particle p-4 particle-4"></figure>
+    <figure data-stellar-ratio="1" class="main-particle p-5 particle-5"></figure>
+    <figure data-stellar-ratio="0.4" class="main-particle p-6 particle-6"></figure>
+    <figure data-stellar-ratio="1.9" class="main-particle p-7 particle-7"></figure>
+    <figure data-stellar-ratio="0.9" class="main-particle p-8 particle-8"></figure>
+    <figure data-stellar-ratio="1.7" class="main-particle p-9 particle-9"></figure>
+    <figure data-stellar-ratio="1.1" class="main-particle p-10 particle-10"></figure>
+    <figure data-stellar-ratio="1.2" class="main-particle p-13 particle-13"></figure>
+    <figure data-stellar-ratio="1.4" class="main-particle p-14 particle-14"></figure>
+    <figure data-stellar-ratio="0.7" class="main-particle p-15 particle-15"></figure>
+    <figure data-stellar-ratio="1.3" class="main-particle p-16 particle-16"></figure>
+    <figure data-stellar-ratio="1.8" class="main-particle p-17 particle-17"></figure>
+    <figure data-stellar-ratio="1.1" class="main-particle p-19 particle-19"></figure>
+    <figure data-stellar-ratio="1" class="main-particle p-20 particle-20"></figure>
+    <figure data-stellar-ratio="0.9" class="main-particle p-22 particle-22"></figure>
+    <div class="hero-body">
+      <div class="container has-text-centered">
+        <h2>Recent work</h2>
+        <div class="columns project-left">
+          <div class="column is-half">
+            <div class="img-wrap">
+              <div data-stellar-ratio="1.3" class="img-bg"></div>
+              <div class="img-top" data-stellar-ratio="1.1"> <img src="img/synebat.jpg" alt=""/>
+                <div class="caption">
+                  <div class="blur"></div>
+                  <div class="caption-text">
+                    <h1><a target="_blank" href="http://www.synebat.com/">Visit website</a></h1>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="column is-half is-left text">
-        <div>
-          <h3>Project #2</h3>
-          <p>Purr for no reason cough furball for paw at beetle and eat it before it gets away pee in human's bed until he cleans the litter box for sweet beast, yet spit up on light gray carpet instead of adjacent linoleum.</p>
-        </div>
-        </div>
-      </div>
-      <div class="columns project3">
-        <div class="column is-half">
-          <div class="img-wrap">
-            <div data-stellar-ratio="1.3" class="img-bg"></div>
-            <div class="img-top" data-stellar-ratio="1.1"><img src="img/project-3.jpg" alt=""/>
-              <div class="caption">
-                <div class="blur"></div>
-                <div class="caption-text">
-                  <h1><a href="#">View project</a></h1>
-                  <img src="img/icon-5.png" width="70" alt=""/> </div>
-              </div>
+          <div class="column is-half text">
+            <div class="left">
+              <h3>Synebat</h3>
+              <h4>Design + Code</h4>
+              <p>Entire website dedicated to a french accounting software.</p>
             </div>
           </div>
         </div>
-        <div class="column is-half text">
-        <div>
-          <h3>Project #3</h3>
-          <p>Purr for no reason cough furball for paw at beetle and eat it before it gets away pee in human's bed until he cleans the litter box for sweet beast, yet spit up on light gray carpet instead of adjacent linoleum.</p>
+        <div class="columns project-right">
+          <div class="column is-half">
+            <div class="img-wrap">
+              <div data-stellar-ratio="1.3" class="img-bg"></div>
+              <div class="img-top" data-stellar-ratio="1.1"><img src="img/henderson.jpg" alt=""/>
+                <div class="caption">
+                  <div class="blur"></div>
+                  <div class="caption-text">
+                    <h1><a target="_blank" href="http://www.parisknowledgeexchange.com/en/">Visit website</a></h1>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="column is-half text">
+            <div class="right">
+              <h3>Henderson Paris Knowledge Exchange</h3>
+              <h4>Design + Code</h4>
+              <p>Three pages event microsite including an ASP registration form. Built with bootstrap, SASS, and different jQuery libraries.</p>
+            </div>
+          </div>
+        </div>
+        <div class="columns project-left">
+          <div class="column is-half">
+            <div class="img-wrap">
+              <div data-stellar-ratio="1.3" class="img-bg"></div>
+              <div class="img-top" data-stellar-ratio="1.1"><img src="img/stoneshot.jpg" alt=""/>
+                <div class="caption">
+                  <div class="blur"></div>
+                  <div class="caption-text">
+                    <h1><a target="_blank" href="http://www.stoneshot.com/e/stoneshot/DMSPrefCentre/pref-centre.asp">Visit page</a></h1>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="column is-half text">
+            <div class="left">
+              <h3>StoneShot preference centre</h3>
+              <h4>Design + Code</h4>
+              <p>Single preference centre page. It&rsquo;s built on Bootstrap, with HTMl and ASP.</p>
+            </div>
+          </div>
+        </div>
+        <div class="columns project-right">
+          <div class="column is-half">
+            <div class="img-wrap">
+              <div data-stellar-ratio="1.3" class="img-bg"></div>
+              <div class="img-top" data-stellar-ratio="1.1"><img src="img/oils.jpg" alt=""/>
+                <div class="caption">
+                  <div class="blur"></div>
+                  <div class="caption-text">
+                    <h1><a target="_blank" href="http://www.agathecocco.com/essential-oils/">Visit page</a></h1>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="column is-half text">
+            <div class="right">
+              <h3>Essential oils company demo page</h3>
+              <h4>Design + Code</h4>
+              <p>Single preference centre page. It&rsquo;s built on Bootstrap, with HTMl and ASP.</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
+  </section>
+  <div class="hero-parent">
+    <section id="contact"  class="hero is-fullheight">
+      <div class="hero-body">
+        <div class="container has-text-centered">
+          <h2>Get in touch</h2>
+          <p>Thank you for stopping by! Feel free to drop me a line at</p>
+          <a class="btn" href="mailto:agathecocco@gmail.com">agathecocco@gmail.com</a></div>
+      </div>
+    </section>
   </div>
-</section>
-<section id="contact"  class="hero">
-  <div class="hero-body">
-    <div class="container has-text-centered">
-      <h2>Get in touch</h2>
-      <p>Wanna talk? Great! You can send me an email to:</p>
-      <a class="btn" href="mailto:agathecocco@gmail.com">
-      <div class="btn-background"><span> Contact me</span></div>
-      </a></div>
-  </div>
-</section>
- 
+</main>
+<button class="hamburger toggle-overlay hamburger--spin" type="button"><div class="hamburger-box"> <div class="hamburger-box-inner"><span class="hamburger-inner"></span> </div></div> </button>
+<aside>
+  <nav>
+    <ul>
+      <li><a href="#intro">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#work">Work</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+</aside>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
-<script type="text/javascript" src="js/skrollr.min.js"></script> 
-<!--[if lt IE 9]>
-  <script type="text/javascript" src="dist/skrollr.ie.min.js"></script>
-  <![endif]--> 
 <script type="text/javascript" src="js/jquery.stellar.js"></script> 
 <script type="text/javascript" src="js/jquery.firefly.js"></script> 
 <script type="text/javascript" src="js/smooth-scrolling.js"></script> 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script> 
-<script src="js/jquery-parallax.js"></script> 
+<script type="text/javascript" src="js/jquery.smooth-scroll.js"></script> 
+<script src="flexibility.js"></script> 
 <script src="js/main.js"></script> 
 <script>
             $(function(){
@@ -189,14 +227,14 @@
             });
 </script> 
 <script>
-		$( '.btn-background' ).on("mousemove", function( e ) {
-			$( 'a.btn span' ).parallax( 90, e );
-			$( '.btn-background' ).parallax( 100	, e );
-		});
-      $( '.intro-text' ).on("mousemove", function( e ) {
-      $( '.intro-text' ).parallax( 150, e );
-    });
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-	</script>
+  ga('create', 'UA-82491357-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
