updated social media links

--- a/home.html
+++ b/home.html
@@ -231,7 +231,7 @@
           <div class="social">
           <a class="icon github" href="https://github.com/agathaco">View my Github account</a>
           <a class="icon codepen" href="https://codepen.io/agathaco/">View my CodePen account</a>
-          <!-- <a class="icon instagram" href="https://github.com/agathaco">View my Instagram account</a> -->
+          <a class="icon instagram" href="https://github.com/agathaco">View my Instagram account</a>
           <a class="icon twitter" href="https://twitter.com/agathacco">View my Twitter account</a>
           </div>
         </div>
